crates/reinhardt-pages/tests/ui/style/fail/const_item.rs
use reinhardt_pages::{style_def};

#[style_def]
const STYLES: CardStyles = style! { .card { color: red; } };

fn main() {}
