crates/reinhardt-pages/tests/ui/style/fail/const_item.stderr
error: expected `static`
 --> tests/ui/style/fail/const_item.rs:4:1
  |
4 | const STYLES: CardStyles = style! {
  | ^^^^^
